php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #7782 [PATCH] Cannot use PATH_INFO fully with php isapi, open since PHP 4.0.3pl1...
Submitted: 2000-11-13 09:19 UTC Modified: 2004-12-18 04:57 UTC
Votes:23
Avg. Score:4.7 ± 0.7
Reproduced:18 of 18 (100.0%)
Same Version:8 (44.4%)
Same OS:14 (77.8%)
From: auke at muze dot nl Assigned:
Status: Closed Package: IIS related
PHP Version: 4CVS (fixed in PHP 5!) OS: Windows 2000
Private report: No CVE-ID: None
 [2000-11-13 09:19 UTC] auke at muze dot nl
Under Apache it is possible to add non existant paths/files after a call to a script, e.g.:

http://host/script.php/a/path/template.html

in which case Apache will start php with script.php and /a/path/template.html in the server variable PATH_INFO.

when trying this in IIS 5.0 under windows 2000, it seems that IIS correctly calls the phpisapi.dll, but php then returns the message:

Warning: Failed opening 'd:\inetpub\wwwroot\test.php\a\path\template.html' for inclusion (include_path='') in Unknown on line 0

It would be nice if this worked like with the apache version...


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2001-01-28 16:12 UTC] jmoore@php.net
Verified under win2k IIS, will look into it further although this might be a general difference between IIS and Apache PHP has no control over.

James
 [2001-01-28 19:01 UTC] jmoore@php.net
After some research ive found that iis doesnt infact support this (dont know why its in CGI specs) You might want to take a look at:

http://support.microsoft.com/support/kb/articles/Q184/3/20.ASP

and

http://support.microsoft.com/support/kb/articles/Q252/3/52.ASP

Changing to feature/change reqest.

James
 [2003-12-10 05:53 UTC] auke at muze dot nl
The three (3) year anniversary of this bug has just passed silently, and I'd
just like to say that the latest release of PHP still has the same
problem, we still maintain patches that fix this for most versions of
PHP, although we're a bit behind now. An overview of all patches can be
found at ftp://ftp.muze.nl/pub/ariadne/win/iis/. 

We'd very much like someone to look at it and at least tell us whether
we are overlooking some long since included solution to this same
problem, or give another reason why our patches are not good enough to
make it to PHP itself. As a reference I'd like you to look at
http://www.zend.com/zend/week/week65.php#Heading4 where it was mentioned
that the fix was scheduled for PHP 4.2.0... For some reason that never
happened. 

If a patch for the current CVS of PHP is needed, please tell us and we'll
make one.
 [2003-12-11 23:58 UTC] sniper@php.net
Please provide patches in unified diff format against the latest stable CVS branch, and if possible, the HEAD too..

(PHP_4_3 and HEAD branches)

 [2004-06-17 11:19 UTC] auke at muze dot nl
I'll try it again, it seems my previous comment did not get saved. I've added a patch against the current stable cvs (php4), the head cvs (php5) already has the exact same fix. In effect it is a backport of the php5 isapi path_info fix.

You can download the patch file at ftp://ftp.muze.nl/pub/ariadne/win/iis/php4isapi.c.06-17-2004.patch
 [2004-06-28 11:49 UTC] demis at liquidbit dot com
Yep this bug has been resolved in PHP 5 RC3, can someone please add this fix to the next release of PHP 4.x series as PHP 5 is too buggy to rely on at the moment
 [2004-07-08 12:53 UTC] CH at deeside dot ac dot uk
I'm experiencing the same problem with PHP 4.3.7 & IIS 5.

Tried upgrading to PHP5 and at least I now get something in $PATH_INFO. However it seems that the first 4 characters are truncated which makes it fairly useless.

I was able to get the path info another way however using $HTTP_SERVER_VARS['URL']. In PHP5 this gives me what I would expect to find in $PATH_INFO. In PHP4 it gives the 'base url' as documented by Microsoft.

Have verified this on 3 different installations using IIS5 & PHP.
 [2004-12-18 04:57 UTC] sniper@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC