MFH: - Fixed bug #7782 (Cannot use PATH_INFO fully with php isapi)